# MandelbrotZoom

./: CMakeLists.txt  MandelbrotZoom.kdev4  main.cpp
cmake_scripts/: FindGLM.cmake
